# rayca-pipe

./: Cargo.toml  README.md
.github/workflows/: rust.yml
shaders/: simple.frag.slang  simple.vert.slang
src/: codegen.rs  lib.rs  model.rs  parse.rs
tests/: test.rs
