[package]
name = "rayca-pipe"
version = "0.0.1"
edition = "2024"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
description = "A Rayca demo"
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.41", features = ["full"] }
quote = "1.0.33"
slang = { git = "https://github.com/fahien/slang-rs" }
proc-macro2 = "1.0.95"

[dev-dependencies]
rayca-core = { git = "https://github.com/fahien/rayca-core.git" }
